feat(gameplay-service): model ST-302 match and round
